--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "remi bertrand <remi.bertrand3108@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "nodemailer": "^1.4.0"
   }
 }
