mise en place formulaire et mise en page

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "remi bertrand <remi.bertrand3108@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.13.3",
+    "ejs": "^2.3.3",
     "express": "^4.13.3",
     "nodemailer": "^1.4.0"
   }
